# Alt-detector

./: LICENSE  README.md  db.sqlite  keep_alive.py  main.py  pyproject.toml  rough.txt  settings.json  version.sqlite
cogs/: Help_command.py  eval.py  mod.py  rebl_only.py  rolemen.py  uptime.py
