[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "alt-detector"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
discord-webhook = "^0.8.0"
flask = "^1.1"
psutil = "^5.7"
python = "^3.8"
[tool.poetry.dev-dependencies]
